--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
-/*
-Theme Name: CNRS Web Kit
-Theme URI: 
-Author: the Atos team
-Author URI: https://atos.net/
-Description: CNRS Web Kit is a modernized take on an ever-popular WordPress layout — the horizontal masthead with an optional right sidebar that works perfectly for blogs and websites. It has custom color options with beautiful default color schemes, a harmonious fluid grid using a mobile-first approach, and impeccable polish in every detail. CNRS Web Kit will make your WordPress look beautiful everywhere.
-Version: 1.3
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: one-column, two-columns, right-sidebar, accessibility-ready, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, microformats, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready, blog
-Text Domain: cnrswebkit
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-*/
-
+/**
+ * Theme cnrswebkit
+ *
+ * @package           CNRS_Web_Kit
+ * @subpackage        CNRS_Web_Kit
+ * @since             CNRS Web Kit 0.3
+ *
+ * Theme Name:        CNRS Web Kit
+ * Theme URI:         https://github.com/cnrs-webkit/cnrswebkit
+ * Author:            the Atos team
+ * Author URI:        https://atos.net/
+ * Description:       CNRS Web Kit is a modernized take on an ever-popular WordPress layout — the horizontal masthead with an optional right sidebar that works perfectly for blogs and websites. It has custom color options with beautiful default color schemes, a harmonious fluid grid using a mobile-first approach, and impeccable polish in every detail. CNRS Web Kit will make your WordPress look beautiful everywhere.
+ * Version:           0.4.1
+ * License:           http://www.gnu.org/licenses/gpl-2.0.html
+ * Contributors:      the Atos team (v 0.3), Christophe Seguinot (v 0.4 ...)
+ * Tags:              one-column, two-columns, right-sidebar, accessibility-ready, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, microformats, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready, blog
+ * Text Domain:       cnrswebkit
+ *
+ * GitHub Plugin URI: https://github.com/cnrs-webkit/cnrswebkit
+ */
 
 /**
  * Table of Contents
