--- a/style.css
+++ b/style.css
@@ -1245,11 +1245,6 @@ blockquote:after,
  * 10.0 - Widgets
  */
 
-.widget {
-	border-top: 4px solid #1a1a1a;
-	margin-bottom: 3.5em;
-	padding-top: 1.75em;
-}
 
 .widget-area > :last-child,
 .widget > :last-child {
@@ -1261,8 +1256,7 @@ blockquote:after,
 	font-size: 1rem;
 	letter-spacing: 0.046875em;
 	line-height: 1.3125;
-	margin: 0 0 1.75em;
-	text-transform: uppercase;
+	margin: 0 0 0.25em;
 }
 
 .widget .widget-title:empty {
@@ -2727,8 +2721,7 @@ p > video {
 	}
 
 	.comments-area,
-	.widget,
-	.content-bottom-widgets .widget-area {
+	.content-bottom-widgets {
 		margin-bottom: 5.25em;
 	}
 
@@ -2954,8 +2947,6 @@ p > video {
 		font-size: 13px;
 		font-size: 0.8125rem;
 		line-height: 1.6153846154;
-		margin-bottom: 3.230769231em;
-		padding-top: 1.615384615em;
 	}
 
 	.widget .widget-title {
@@ -3241,10 +3232,6 @@ p > video {
 
 	.pagination {
 		margin-bottom: 5.894736842em;
-	}
-
-	.widget {
-		margin-bottom: 4.307692308em;
 	}
 
 	.site-main > article {
