webkit debug-20 : customizer: add text align parameter, improved preview

--- a/style.css
+++ b/style.css
@@ -1410,6 +1410,10 @@ blockquote:after,
 	overflow: hidden;
 }
 
+.headerThumbPart img {
+	height:50px;
+}
+
 .custom-logo-link {
 	display: block;
 }
